# jira-confluence-ai-context

./: .env.example  .gitignore  README.md  README.uk.md  _setup_git.sh  pyproject.toml  requirements.txt
app/: __init__.py  adf_text.py  cli.py  config.py  confluence_sync.py  http_util.py  jira_sync.py  jql_builder.py
node/: package-lock.json  package.json
node/src/: adfToPlain.js  cli.js  config.js  http.js
node/src/confluence/: sync.js
node/src/jira/: jqlBuilder.js  sync.js
