[project]
name = "jira-context"
version = "0.1.0"
description = "Sync Jira issues and Confluence pages for local AI context"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "html2text>=2024.2.26",
]

[project.scripts]
jira-context = "app.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
